# jaxley-retina

./: README.md  pickle_removal.ipynb  pyproject.toml  requirements.txt
data/: 120_center_responses.npy  120_center_responses.pkl  Nadal2020_Fig3c_PigGrads.csv
jaxley_retina/: cell_embedding.py
jaxley_retina/IPL/: BC.py
jaxley_retina/OPL/: HC.py  PR.py  data_prep.py  train_cascade.py  train_ribbon.py  transforms.py
jaxley_retina/mnist/: contrast_sweep.py  image_to_stim.py  model.py  model_utils.py  reference_contrast_sweep.py  reference_models.py  reference_performance.py  simple_data_prep.py  train.py  train_io.py  transforms.py
notebooks/OPL/: cascade_fit.ipynb  data_prep.ipynb  ribbon_fit.ipynb
notebooks/mnist/: conductances.ipynb  mnist.ipynb  pr_dynamics.ipynb
paper/: .matplotlibrc
paper/fig1/notebooks/: assemble_figure.ipynb
paper/fig2/notebooks/: 01_assemble_figure.ipynb  02_corr_coefs.ipynb  SC_comps.pkl  cascade_final_fit.pkl  ribbon_solns.pkl
paper/fig3/notebooks/: assemble_figure.ipynb
paper/fig4/notebooks/: assemble_figure.ipynb  plotting.py
paper/fig4/results/: contrast_sweep_66.pkl  contrast_sweep_77_init_control.pkl  linear_contrast_sweep_0.pkl  (+5 more)
params/cascade/: params_0.pkl  params_1.pkl  params_2.pkl  params_3.pkl  params_4.pkl  params_5.pkl
params/mnist/: trained_params_0504_201_noBC.pkl  trained_params_0504_201_yesBC.pkl  trained_params_0504_209_full.pkl  trained_params_0504_209_fulldist.pkl
params/ribbon/: all_losses.txt  all_trained_params.txt  best_20_params.pkl  best_20_params_w_cellnums.pkl  cell_nums.txt
(+2 files in other folders)
